--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world
+
+<head>
+	<h1>Main header</h1>
+</head>
+<body>
+	<h2>Secondary header h2</h2>
+	<p>
+		Once upon a time...
+	</p>
+</body>
